Fixed fetching data, when switching sections

--- a/frontend/src/components/PostsContainer/styles/PostsContainer.module.scss
+++ b/frontend/src/components/PostsContainer/styles/PostsContainer.module.scss
@@ -5,9 +5,10 @@
     align-items: center;
     flex-direction: column;
     min-height: 750px;
+    margin-bottom: 50px;
 }
 
 .observer {
     position: absolute;
-    bottom: 750px;
+    bottom: 700px;
 }
