--- a/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
+++ b/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
@@ -89,6 +89,11 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 300px;
+    max-width: 90%;
+    align-self: center;
 }
 
 .suchEmpty {
@@ -108,15 +113,6 @@
         max-height: 50px;
         font-size: 2rem;
     }
-}
-
-.content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-height: 300px;
-    margin-bottom: 50px;
 }
 
 .observer {
