Improved sections component, this also fixes as stated in #2

--- a/frontend/src/components/Section/styles/Section.module.scss
+++ b/frontend/src/components/Section/styles/Section.module.scss
@@ -1,8 +1,8 @@
 .sectionWrapper {
+    position: relative;
     a {
         p {
             margin: 0px;
-            font-size: 1rem;
             font-weight: bold;
         }
     }
