--- a/frontend/src/components/sites/MainSite/styles/MainSite.module.scss
+++ b/frontend/src/components/sites/MainSite/styles/MainSite.module.scss
@@ -1,7 +1,7 @@
 .mainSiteWrapper {
     position: relative;
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 15% auto;
     width: 90%;
 }
 
