--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -45,7 +45,7 @@
     justify-content: center;
     width: 100%;
     position: relative;
-    background-color: rgb(238, 238, 238);
+    background-color: rgba(238, 238, 238, 0.65);
 }
 
 .image {
