--- a/frontend/src/components/Section/styles/Section.module.scss
+++ b/frontend/src/components/Section/styles/Section.module.scss
@@ -1,9 +1,19 @@
 .sectionWrapper {
     position: relative;
-    a {
-        p {
-            margin: 0px;
-            font-weight: bold;
-        }
+    border: 2px solid #9bd4e7;
+    background-color: #eeeeee46;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 5px;
+
+    p {
+        width: max-content;
+        margin: 20px auto;
+        font-weight: bold;
+    }
+
+    &:hover {
+        background-color: #9bd4e7;
+        border-color: #111;
     }
 }
