--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@ code {
     monospace;
 }
 
+*, *::after, *::before { box-sizing: border-box; }
+
 html {
   overflow-y: auto;
   overflow-y: overlay;
