--- a/frontend/src/components/Header/styles/Header.module.scss
+++ b/frontend/src/components/Header/styles/Header.module.scss
@@ -7,6 +7,7 @@
     min-width: 100%;
     background-color: white;
     z-index: 1000;
+    max-height: 86px;
 
     &::before, &::after {
         content: '';
