--- a/frontend/src/components/Login/styles/Login.module.scss
+++ b/frontend/src/components/Login/styles/Login.module.scss
@@ -8,6 +8,12 @@
 .profile {
     display: flex;
     flex-direction: row;
+    
+    li {
+        display: flex;
+        justify-content: center;
+        max-height: 50px;
+    }
 
     img {
         margin-right: 20px;
