--- a/frontend/src/components/Login/styles/Login.module.scss
+++ b/frontend/src/components/Login/styles/Login.module.scss
@@ -5,6 +5,37 @@
     }
 }
 
+.circle {
+    cursor: pointer;
+    position: relative;
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    background-color: rgba(58, 59, 60, 0.1);
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    svg {
+        path {
+            background-color: white;
+        }
+    }
+
+    p {
+        position: absolute;
+        transform: translateY(-9%);
+        font-size: 2rem;
+        font-weight: bold;
+    }
+}
+
 .profile {
     display: flex;
     flex-direction: row;
