--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -48,6 +48,10 @@
     background-color: rgba(238, 238, 238, 0.65);
 }
 
+.minHeight {
+    min-height: 300px;
+}
+
 .image {
     max-width: 90%;
 }
