Show sections button no hides when user scrolls down and shows back when user scrolls up as stated in #6

--- a/frontend/src/components/Sections/styles/Sections.module.scss
+++ b/frontend/src/components/Sections/styles/Sections.module.scss
@@ -114,7 +114,13 @@
 
     .toggleButtonWrapper {
         visibility: visible;
+        transition: opacity 300ms linear;
     }
+}
+
+.hideButton {
+    opacity: 0;
+    cursor: initial;
 }
 
 .visible {
