--- a/frontend/src/components/Header/styles/Header.module.scss
+++ b/frontend/src/components/Header/styles/Header.module.scss
@@ -11,7 +11,6 @@
 
     &::before, &::after {
         content: '';
-        display: block;
         position: absolute;
         min-height: 2px;
         width: 90%;
@@ -65,5 +64,12 @@
                 }
             }
         }
+    }
+}
+
+@media (max-width: 1000px) {
+    .about {
+        visibility: hidden;
+        width: 0px;
     }
 }
