--- a/frontend/src/components/Sections/styles/Sections.module.scss
+++ b/frontend/src/components/Sections/styles/Sections.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    margin-left: 3px;
 }
 
 .sectionsWrapper {
@@ -19,7 +20,7 @@
         width: 3px;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
-        transform: translateX(100%);
+        transform: translateX(200%);
     }
     
     &::before {
@@ -104,11 +105,12 @@
     .fixedSectionsWrapper {
         position: fixed;
         top: 0px;
-        left: -50vw;
+        left: -65vw;
         width: 60vw;
         height: 100vh;
         background-color: white;
         opacity: 0;
+        z-index: 10000;
         transition: left 300ms linear, opacity 300ms linear;
     }
 
