--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -58,7 +58,7 @@
 }
 
 .image {
-    max-width: 90%;
+    max-width: 100%;
 }
 
 .clicked {
@@ -71,5 +71,11 @@
 
     &:hover {
         background-color: rgba(0 119 255 / .25) !important;
+    }
+}
+
+@media (max-width: 800px) {
+    .postWrapper {
+        margin: 0 10px;
     }
 }
