Fixed relative design in sections component as stated in #6

--- a/frontend/src/components/Sections/styles/Sections.module.scss
+++ b/frontend/src/components/Sections/styles/Sections.module.scss
@@ -130,3 +130,9 @@
     opacity: 1;
     z-index: 1001;
 }
+
+@media (max-width: 800px) {
+    .toggleButtonWrapper {
+        transform: translateX(-100%);
+    }
+}
