--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -5,6 +5,11 @@
     position: relative;
     align-items: center;
     margin: 0 25px;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
     
     h2 {
         word-wrap: break-word;
