--- a/frontend/src/components/PostModal/styles/PostModal.module.scss
+++ b/frontend/src/components/PostModal/styles/PostModal.module.scss
@@ -19,6 +19,13 @@
     }
 }
 
+@media only screen and (max-width: 900px) {
+    .modalWrapper {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .fadeIn {
     opacity: 1;
 	animation-name: fadeInOpacity;
