--- a/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
+++ b/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
@@ -1,3 +1,10 @@
+.commentsContainerWrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
 .container {
     width: 100%;
     display: flex;
@@ -10,4 +17,9 @@
     gap: 8px;
     width: 90%;
     align-self: center;
+}
+
+.observer {
+    position: absolute;
+    bottom: 200px;
 }
