Added comments liked and comments created section in profile page as stated in #13

--- a/frontend/src/components/PostsContainer/styles/PostsContainer.module.scss
+++ b/frontend/src/components/PostsContainer/styles/PostsContainer.module.scss
@@ -4,8 +4,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 750px;
+    min-height: 100px;
     margin-bottom: 50px;
+    width: 100%;
 }
 
 .limitSpace {
