--- a/frontend/src/components/Comment/styles/Comment.module.scss
+++ b/frontend/src/components/Comment/styles/Comment.module.scss
@@ -1,3 +1,17 @@
+.postTitle {
+    display: flex;
+    flex-direction: row;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
 .commentSplit {
     display: flex;
     flex-direction: column;
