--- a/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
+++ b/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
@@ -91,8 +91,8 @@
     align-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 90%;
     align-self: center;
+    width: 90%;
 }
 
 .suchEmpty {
