Fixed editing comment and added the option to delete a comment as stated in #17

--- a/frontend/src/components/Comment/styles/Comment.module.scss
+++ b/frontend/src/components/Comment/styles/Comment.module.scss
@@ -66,6 +66,15 @@
 .comment {
     margin-top: 5px;
     margin-bottom: 5px;
+
+    word-break: break-word;
+    white-space: pre-line;
+
+    margin-right: 25px;
+
+    p {
+        margin: 0;
+    }
 }
 
 .commentControl {
