--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -17,13 +17,16 @@
     }
 }
 
+.content {
+    margin-bottom: 15px;
+}
+
 .center {
     display: flex;
     justify-content: center;
 }
 
 .statistics {
-    margin-top: 15px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -31,7 +34,7 @@
     width: 100%;
     gap: 25px;
 
-    div {
+    > div {
         cursor: pointer;
         display: flex;
         justify-content: space-evenly;
@@ -53,10 +56,9 @@
                 margin-right: 10px;
             }
         }
-
     }
 
-    div:hover {
+    > div:hover {
         background-color: rgba(150 150 150 / 0.25);
     }
 }
@@ -98,4 +100,55 @@
     .postWrapper {
         margin: 0 10px;
     }
+}
+
+.options {
+    display: flex;
+    flex-direction: row;
+    justify-content: center !important;
+    gap: 16px !important;
+    height: 43.2px;
+
+    > div {
+        &.optionsContainerStyle {
+            border-radius: 50%;
+            width: 4px;
+            height: 4px;
+            background-color: black;
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+    }
+}
+
+.relativeWrapper {
+    position: relative;
+}
+
+.optionsContainerContent {
+    width: max-content;
+    position: absolute;
+    border: 2px solid rgba(0 0 0 / 0.25);
+    background-color: white;
+    transform: translateY(-50%);
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    p {
+        margin: 0 10px 0 10px;
+        padding: 10px 0 10px 0;
+        position: relative;
+        cursor: pointer;
+
+        &:not(:last-child) {
+            border-bottom: 2px solid black;
+        }
+    }
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
 }
