--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -15,6 +15,14 @@
         word-wrap: break-word;
         overflow-wrap: anywhere;
     }
+
+    border: 2px solid rgba(0 0 0 / 0.25);
+
+    &:hover {
+        border: 2px solid rgba(0 0 0 / 0.75);
+    }
+    
+    padding-bottom: 5px;
 }
 
 .content {
