--- a/frontend/src/components/sites/RegisterSite/styles/RegisterSite.module.scss
+++ b/frontend/src/components/sites/RegisterSite/styles/RegisterSite.module.scss
@@ -1,9 +1,22 @@
 .registerSiteWrapper {
+    display: grid;
+    place-content: center;
+    grid-template-columns: 60% 40%;
+    max-width: 90%;
+    margin-left: 5%;
+    min-height: calc(100vh - 92px);
+}
+
+.mainContent {
     display: flex;
     justify-content: center;
+    align-content: center;
     flex-direction: column;
-    align-items: center;
-    min-height: calc(100vh - 92px);
+
+    h1 {
+        align-self: center;
+        max-width: max-content;
+    }
 }
 
 .registerSiteForm {
@@ -22,27 +35,215 @@
     margin-right: 20px;
 }
 
-.errorContainer {
-    position: relative;
+.inputData {
+    height: 50px;
 
-    div {
-        animation: fadeIn 0.5s ease-in;
-        min-width: 100%;
-        background-color: red;
-        border-radius: 10px;
+    margin: 15px 0px 15px 0px;
 
-        p {
-            padding: 5px 15px;
-            margin: 10px 0px;
+    .inputDataWrapper {
+        position: relative;
+        height: 100%;
+        width: 90%;
+        margin-left: 5%;
+        align-self: center;
+    }
+
+    input {
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        height: 100%;
+        width: 100%;
+        border: none;
+        outline: none;
+        border-bottom: 2px solid silver;
+        font-size: 17px;
+        margin: 0px auto;
+
+        transition: 1s all ease;
+
+        &:valid.hasValue ~ label, &:focus ~ label {
+            transform: translateY(-38px);
+        }
+    }
+
+    label {
+        position: absolute;
+        bottom: 15px;
+        left: 5px;
+        color: grey;
+        pointer-events: none;
+
+        transition: all 0.3s ease;
+    }
+}
+
+.errorInput input {
+    border-bottom: 2px solid red;
+}
+
+.submit {
+    margin: 10px 0px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+
+    .submitWrapper {
+        position: relative;
+        width: 50%;
+        max-width: 400px;
+        height: 100%;
+
+        &:before {
+            z-index: -1;
+            position: absolute;
+            content: '';
+            display: inline-block;
+            color: black;
+            background-color: red;
+            top: -5px;
+            left: -10px;
+            width: 33%;
+            height: 33%;
+
+            transition: all 0.3s ease;
+        }
+
+        &:after {
+            z-index: -1;
+            position: absolute;
+            content: '';
+            display: inline-block;
+            color: black;
+            background-color: red;
+            bottom: -5px;
+            right: -10px;
+            width: 33%;
+            height: 33%;
+
+            transition: all 0.3s ease;
+        }
+
+        &:hover {
+            &:before {
+                left: calc(100% + 10px);
+                transform: translateX(-100%);
+            }
+
+            &:after {
+                right: calc(100% + 10px);
+                transform: translateX(100%);
+            }
+        }
+    }
+
+    input {
+        cursor: pointer;
+        margin: 0px;
+        width: 100%;
+        height: 100%;
+        border: 2px solid black;
+        background-color: white;
+
+        font-size: 25px;
+        font-weight: bold;
+    }
+}
+
+.loginNavigation {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    margin: 25px;
+
+    h1 {
+        align-self: center;
+        max-width: max-content;
+    }
+}
+
+.fileInputWrapper {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    min-height: 100px;
+    margin: 10px 0px;
+
+	input {
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+
+        & + label {
+            align-self: center;
+            font-weight: 700;
+            color: white;
+            background-color: black;
+            cursor: pointer;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            height: 48px;
+            width: 200px;
+        }
+
+        &:focus + label, & + label:hover {
+            background-color: red;
+        }
+
+        &:focus + label {
+            outline: 1px dotted #000;
+            outline: -webkit-focus-ring-color auto 5px;
+        }
+
+        & + label * {
+            pointer-events: none;
         }
     }
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
+.error {
+    min-height: 25px;
+    color: red;
+    max-width: 88%;
+    margin-left: 6%;
+    margin-bottom: 5px;
+}
+
+.loginNavigation {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    margin: 25px;
+
+    h1, p {
+        text-align: center;
+        align-self: center;
+        max-width: max-content;
     }
-    to {
-        opacity: 1;
+}
+
+@media only screen and (max-width: 900px) {
+    .registerSiteWrapper {
+        grid-template-columns: 100%;
+    }
+
+    .loginNavigation {
+        margin: 0px 0px 25px 0px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .fileInputWrapper {
+        flex-direction: column;
+
+        img {
+            align-self: center;
+            margin-bottom: 25px;
+        }
     }
 }
