Changed some css properties to make it look better

--- a/frontend/src/components/sites/LoginSite/styles/LoginSite.module.scss
+++ b/frontend/src/components/sites/LoginSite/styles/LoginSite.module.scss
@@ -6,6 +6,10 @@
     max-width: 90%;
     margin-left: 5%;
     text-align: center;
+
+    h1 {
+        margin: 0px 0px 10px 0px;
+    }
 }
 
 .mainContent {
