Changed input label css properties to align with other item

--- a/frontend/src/components/sites/LoginSite/styles/LoginSite.module.scss
+++ b/frontend/src/components/sites/LoginSite/styles/LoginSite.module.scss
@@ -65,7 +65,7 @@
     label {
         position: absolute;
         bottom: 15px;
-        left: 5px;
+        left: 1%;
         color: grey;
         pointer-events: none;
 
