--- a/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
+++ b/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
@@ -1,5 +1,7 @@
 .uploadSiteWrapper {
     display: grid;
+    width: 90%;
+    margin-left: 5%;
     grid-template-columns: 50% 50%;
     min-height: calc(100vh - 96px);
 }
@@ -23,27 +25,205 @@
     }
 }
 
+.minHeight {
+    min-height: 35px;
+}
+
+.selectData {
+
+    select {
+        margin-left: 5%;
+        width: 90%;
+        height: 50px;
+        border: none;
+        border-bottom: 2px solid silver;
+        outline: none !important;
+    }
+
+    label {
+        color: grey;
+        margin-left: 6%;
+    }
+}
+
+.submit {
+    margin: 10px 0px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+
+    .submitWrapper {
+        position: relative;
+        width: 50%;
+        max-width: 400px;
+        height: 100%;
+
+        &:before {
+            z-index: -1;
+            position: absolute;
+            content: '';
+            display: inline-block;
+            color: black;
+            background-color: red;
+            top: -5px;
+            left: -10px;
+            width: 33%;
+            height: 33%;
+
+            transition: all 0.3s ease;
+        }
+
+        &:after {
+            z-index: -1;
+            position: absolute;
+            content: '';
+            display: inline-block;
+            color: black;
+            background-color: red;
+            bottom: -5px;
+            right: -10px;
+            width: 33%;
+            height: 33%;
+
+            transition: all 0.3s ease;
+        }
+
+        &:hover {
+            &:before {
+                left: calc(100% + 10px);
+                transform: translateX(-100%);
+            }
+
+            &:after {
+                right: calc(100% + 10px);
+                transform: translateX(100%);
+            }
+        }
+    }
+
+    input {
+        cursor: pointer;
+        margin: 0px;
+        width: 100%;
+        height: 100%;
+        border: 2px solid black;
+        background-color: white;
+        color: black !important;
+
+        font-size: 25px;
+        font-weight: bold;
+    }
+}
+
+.fileInputWrapper {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    min-height: 80px;
+    margin: 10px 0px;
+
+	input {
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+
+        & + label {
+            align-self: center;
+            font-weight: 700;
+            color: white;
+            background-color: black;
+            cursor: pointer;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            height: 48px;
+            width: 200px;
+        }
+
+        &:focus + label, & + label:hover {
+            background-color: red;
+        }
+
+        &:focus + label {
+            outline: 1px dotted #000;
+            outline: -webkit-focus-ring-color auto 5px;
+        }
+
+        & + label * {
+            pointer-events: none;
+        }
+    }
+}
+
+.inputData {
+    height: 50px;
+
+    margin: 15px 0px 15px 0px;
+
+    .inputDataWrapper {
+        position: relative;
+        height: 100%;
+        width: 90%;
+        margin-left: 5%;
+        align-self: center;
+        outline: none;
+    }
+
+    input {
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        height: 100%;
+        width: 100%;
+        border: none;
+        outline: none;
+        border-bottom: 2px solid silver;
+        font-size: 17px;
+        margin: 0px auto;
+
+        &:valid.hasValue ~ label, &:focus ~ label {
+            transform: translateY(-36px);
+        }
+    }
+
+    label {
+        position: absolute;
+        bottom: 17px;
+        left: 1%;
+        color: grey;
+        pointer-events: none;
+
+        transition: all 0.3s ease;
+    }
+}
+
+.error {
+    min-height: 25px;
+    color: red;
+    max-width: 88%;
+    margin-left: 6%;
+    transform: translateY(-5px);
+}
+
 .formContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .form {
     display: flex;
     flex-direction: column;
-
-    input {
-        margin: 20px 0px;
-    }
+    width: 90%;
 }
 
 @media (max-width: 1000px) {
     .uploadSiteWrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        grid-template-columns: 100%;
+        grid-row: 1;
 
         >div {
             min-width: 100%;
