Added margin to the title of an post

--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -29,6 +29,10 @@
     margin-bottom: 15px;
 }
 
+.marginLeftRight {
+    margin: 0px 5%;
+}
+
 .center {
     display: flex;
     justify-content: center;
