--- a/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
+++ b/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
@@ -12,6 +12,8 @@
     justify-content: flex-start;
     align-items: center;
     position: relative;
+    margin-bottom: 15px;
+    width: 100%;
 
     h2 {
         max-width: 80%;
@@ -109,7 +111,6 @@
         height: 100%;
         border: 2px solid black;
         background-color: white;
-        color: black !important;
 
         font-size: 25px;
         font-weight: bold;
