Optimized requests made for comment author avatar as stated in #15

--- a/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
+++ b/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
@@ -16,12 +16,14 @@
     width: 100%;
 
     h2 {
+        margin: 0 10%;
         max-width: 80%;
         word-wrap: break-word;
         overflow-wrap: anywhere;
     }
 
     img {
+        margin: 0 10%;
         max-width: 80%;
         max-height: 80%;
     }
