Fixed styling in profile site, removed the option to open reply to comment, because it is still not finished

--- a/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
+++ b/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
@@ -20,6 +20,11 @@
     gap: 8px;
     width: 90%;
     align-self: center;
+
+    h3 {
+        word-wrap: break-word;
+        overflow-wrap: anywhere;
+    }
 }
 
 .observer {
