--- a/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
+++ b/frontend/src/components/sites/ProfileSite/styles/ProfileSite.module.scss
@@ -55,6 +55,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        flex-wrap: wrap;
         list-style: none;
         gap: 25px;
 
@@ -104,6 +105,7 @@
     height: 100px;
     border-radius: 50%;
     background-color: #ddd;
+    margin-top: 15px;
 
     p {
         margin: 0;
