--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -49,8 +49,9 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    padding-left: 2%;
-    width: 100%;
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 96%;
     gap: 25px;
 
     > div {
