Removed option to click on comment icon

--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -45,6 +45,10 @@
     resize: vertical;
 }
 
+.noPointer {
+    cursor: default !important;
+}
+
 .statistics {
     display: flex;
     flex-direction: row;
