--- a/frontend/src/components/Navbar/styles/Navbar.module.scss
+++ b/frontend/src/components/Navbar/styles/Navbar.module.scss
@@ -89,6 +89,9 @@
 }
 
 @media (max-width: 1000px) {
+    .profile {
+        padding-top: 10px;
+    }
     .burgerMenu {
         visibility: visible;
         width: 50px;
