Fixed the sticky sections element, added responsivness to post component

--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -189,3 +189,11 @@
         width: 45%;
     }
 }
+
+@media (max-width: 525px) {
+    .statistics {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
