Added some margin to the top of the image preview in the upload site

--- a/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
+++ b/frontend/src/components/sites/UploadSite/styles/UploadSite.module.scss
@@ -16,7 +16,7 @@
     width: 100%;
 
     h2 {
-        margin: 0 10%;
+        margin: 25px 10% 20px;
         max-width: 80%;
         word-wrap: break-word;
         overflow-wrap: anywhere;
@@ -30,7 +30,7 @@
 }
 
 .minHeight {
-    min-height: 35px;
+    min-height: 50px;
 }
 
 .selectData {
