SendButton component width issue fix

--- a/frontend/src/components/Post/styles/Post.module.scss
+++ b/frontend/src/components/Post/styles/Post.module.scss
@@ -193,7 +193,7 @@
     justify-content: space-evenly;
     width: 90%;
 
-    button {
+    button, input[type=submit] {
         margin-top: 10px;
         margin-bottom: 10px;
         width: 45%;
