--- a/frontend/src/components/SendButton/styles/SendButton.module.scss
+++ b/frontend/src/components/SendButton/styles/SendButton.module.scss
@@ -2,13 +2,13 @@
     margin: 10px 0px;
     height: 50px;
     display: flex;
+    width: 100%;
     justify-content: center;
     align-content: center;
 
     .sendButton {
         position: relative;
         width: 50%;
-        max-width: 400px;
         height: 100%;
 
         &:before {
@@ -57,10 +57,11 @@
     input {
         cursor: pointer;
         margin: 0px;
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         border: 2px solid black;
         background-color: white;
+        margin: 0px !important;
 
         font-size: 25px;
         font-weight: bold;
