Removed user slect from Section component

--- a/frontend/src/components/Section/styles/Section.module.scss
+++ b/frontend/src/components/Section/styles/Section.module.scss
@@ -12,6 +12,7 @@
         width: max-content;
         margin: 20px auto;
         font-weight: bold;
+        user-select: none;
     }
 
     &:hover {
