--- a/frontend/src/components/Header/styles/Header.module.scss
+++ b/frontend/src/components/Header/styles/Header.module.scss
@@ -46,6 +46,8 @@
                 justify-content: space-around;
                 align-items: center;
                 padding: 0px;
+                margin: 0px;
+                margin-top: 10px;
 
                 li {
                     display: flex;
@@ -57,8 +59,9 @@
                         text-decoration: none;
                         color: inherit;
 
-                        h1 {
-                            margin: 0px;
+                        img {
+                            width: 60px;
+                            height: 60px;
                         }
                     }
                 }
