--- a/frontend/src/components/Navbar/styles/Navbar.module.scss
+++ b/frontend/src/components/Navbar/styles/Navbar.module.scss
@@ -39,6 +39,8 @@
 
 .profile {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     
     li {
